Fixed resizing of the modeller so that panes no longer go off screen

--- a/src/components/root-environment/modelling-environment/modeller/modeller.scss
+++ b/src/components/root-environment/modelling-environment/modeller/modeller.scss
@@ -9,6 +9,7 @@
 
 .modeller .pane {
     background: white;
+    overflow: hidden;
 }
 
 .modeller .pane.right {
